Bug 971975 - Proper state and non-null check for CacheFile::WriteMetadataIfNeededLocked(), r=michal